; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-datasheet.c_lnew.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-datasheet.c_lnew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TLIGHTUSERDATA = common dso_local global i32 0, align 4
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@TABLES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lnew to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lnew(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @LUA_TLIGHTUSERDATA, align 4
  %6 = call i32 @luaL_checktype(i32* %4, i32 1, i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i8* @lua_touserdata(i32* %7, i32 1)
  store i8* %8, i8** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %11 = load i32, i32* @TABLES, align 4
  %12 = call i32 @lua_getfield(i32* %9, i32 %10, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @lua_pushvalue(i32* %13, i32 1)
  %15 = load i32*, i32** %2, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @lua_rawsetp(i32* %15, i32 -2, i8* %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @create_proxy(i32* %18, i8* %19, i32 0)
  ret i32 1
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i8* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_getfield(i32*, i32, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_rawsetp(i32*, i32, i8*) #1

declare dso_local i32 @create_proxy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
